1.0.0~alpha25 (2014-10-XX)
ADD: 'Related Videos'
UPD: show channel name in the description
FIX: disable verification warnings

1.0.0~alpha24 (2014-10-27)
ADD: 'Browse Channels'
FIX: support for skins calling '.*/extrafanart/'

1.0.0~alpha23 (2014-10-26)
ADD: 'What to watch'
FIX: 'My subscriptions' switched to version APIv2.1 (Google) DAMN YOU!!!

1.0.0~alpha22 (2014-10-25)
ADD: sorting
FIX: crash when calling 'My subscriptions'
FIX: signature calculation

1.0.0~alpha21 (2014-10-24)
CHG: method for playing a video changed to a more query like uri
FIX: crash under android systems. Regular Expressions work a little different :)

1.0.0~alpha20 (2014-10-23)
FIX: Git merge with master

1.0.0~alpha19 (2014-10-23)
UPD: complete rewrite
UPD: switch to kodion

1.0.0~alpha18 (2014-08-31)
- ADD: Support for ETag - could improve performance
- ADD: remove item of search history
- FIX: #22 calculation of duration
- FIX: #28 display 'general' instead of 'like' in settings

1.0.0~alpha17 (2014-08-10)
- ADD: 'Go to CHANNEL' of a selected video
- ADD: Support for 'Subscribe' and 'Unsubscribe' of channels
- ADD: Full support for 'Like'
- ADD: Remove own playlist via context menu
- ADD: Show/Hide 'Browse Channels' via settings
- FIX: Using only thumbnails from API v3 - 'My Subscriptions' is using v2 and returning different thumbnails
- FIX: Displaying false channel in video description
- FIX: Don't update search history before showing the search result

1.0.0~alpha16 (2014-08-08)
- FIX: provide 'Next Page' under 'My Subscriptions' if there are more results
- ADD: Hide and show menu items via settings 
- ADD: Search history (set the size via settings from 0-50 items)

1.0.0~alpha15 (2014-08-04)
- FIX: moved (only) for the subscribtions to V2 to see new uploaded videos

1.0.0~alpha14 (2014-08-03)
- ADD: 'Remove' via context menu for playlists
- ADD: 'Watch Later' via context menu to add a video to the 'Watch Later' playlist