@@ -45,4 +45,5 @@
     <string id="30512">Kanäle finden</string>
     <string id="30513">Empfohlene Videos</string>
     <string id="30514">Ähnliche Videos</string>
+    <string id="30515">Auto-Entfernen für "Später ansehen"</string>
 </strings>
